tests/fixtures/valid/empty_and_expression_statements.c
int main() {
    ;
    int i = 0;
    int hits = 0;

    while (i < 5) {
        ;
        i + hits;
        i = i + 1;
        if (i == 2) {
            ;
            continue;
        }
        hits = hits + i;
    }

    for (i + hits; i < 8; i + hits) {
        ;
        hits = hits + 1;
        i = i + 1;
    }

    return hits;
}
