tests/fixtures/invalid/label_statement.c
int main() {
done:
    return 0;
}
